@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.1-23
-Date: 2019-5-25
+Date: 2019-5-27
 Title: Genetic Analysis Package
 Author: Jing Hua Zhao and colleagues with inputs from Kurt Hornik and
         Brian Ripley
@@ -9,9 +9,10 @@ URL: https://github.com/jinghuazhao/R
 BugReports: https://github.com/jinghuazhao/R/issues
 Depends: R (>= 2.10)
 Suggests: BradleyTerry2, MASS, Matrix, MCMCglmm, R2jags, bdsmatrix,
-        circlize, coda, coxme, dplyr, foreign, forestplot, gap.datasets, grid, 
-        haplo.stats, kinship2, lattice, magic, mets, nlme, pedigree,
-        pedigreemm, plotrix, qqman, regress, meta, rms, survival
+        calibrate, circlize, coda, coxme, dplyr, foreign, forestplot,
+        gap.datasets, grid, haplo.stats, kinship2, lattice, 
+        magic, meta, mets, nlme, pedigree, pedigreemm, plotrix,
+        qqman, regress, rmeta, rms, survival
 LazyData: Yes
 LazyLoad: Yes
 Description: It is designed as an integrated package for genetic data
