@@ -6,30 +6,31 @@ forestplot.forestplot <- function(tbl)
                        c("N",N,tbl[i,"N"]))
   print(tabletext)
   requireNamespace("forestplot")
-  forestplot(tabletext,
+  requireNamespace("rmeta")
+  forestplot::forestplot(tabletext,
              c(NA,BETA,tbl[i,"Effect"]),
              c(NA,BETA-1.96*SE,tbl[i,"Effect"]-1.96*tbl[i,"StdErr"]),
              c(NA,BETA+1.96*SE,tbl[i,"Effect"]+1.96*tbl[i,"StdErr"]),
              zero=0,
              is.summary=c(TRUE,rep(FALSE,length(BETA)),TRUE),
              boxsize=0.75,
-             col=meta.colors(box="royalblue",line="darkblue", summary="royalblue"))
+             col=rmeta::meta.colors(box="royalblue",line="darkblue", summary="royalblue"))
   title(title)
   metaplot(BETA,SE,N,
            labels=sprintf("%s (%.3f %.3f %.0f)",study,BETA,SE,N),
            xlab="Effect distribution",ylab="",xlim=c(-1.5,1.5),
            summn=tbl[i,"Effect"],sumse=tbl[i,"StdErr"],sumnn=tbl[i,"N"],
-           colors=meta.colors(box="red",lines="blue", zero="green", summary="red", text="black"))
+           colors=rmeta::meta.colors(box="red",lines="blue", zero="green", summary="red", text="black"))
   title(title)
 }
 
 METAL_forestplot <- function(tbl,all,rsid,pdf="INF1.fp.pdf",package="meta",...)
 {
   requireNamespace("dplyr")
-  m <- within(nest_join(tbl,rsid),{rsid <- unlist(lapply(lapply(y,"[[",1),"[",1))})
+  m <- within(dplyr::nest_join(tbl,rsid),{rsid <- unlist(lapply(lapply(y,"[[",1),"[",1))})
   isna <- with(m, is.na(rsid))
   t <- within(m, {rsid[isna] <- MarkerName[isna]})
-  m <- within(nest_join(all,rsid),{rsid <- unlist(lapply(lapply(y,"[[",1),"[",1))})
+  m <- within(dplyr::nest_join(all,rsid),{rsid <- unlist(lapply(lapply(y,"[[",1),"[",1))})
   isna <- with(m, is.na(rsid))
   a <- within(m, {rsid[isna] <- MarkerName[isna]})
   pdf(pdf,...)
