@@ -3,7 +3,7 @@ mhtplot2 <- function (data, control = mht.control(), hcontrol = hmht.control(),
 {
     for(p in c("grid")) {
        if (length(grep(paste("^package:", p, "$", sep=""), search())) == 0) {
-          if (!require(p, quietly = TRUE, character.only=TRUE))
+          if (!requireNamespace(p, quietly = TRUE))
           warning(paste("mhtplot2 needs package `", p, "' to be fully functional; please install", sep=""))
        }
     }
